--- a/apps/common/main/resources/less/colors-table-dark-contrast.less
+++ b/apps/common/main/resources/less/colors-table-dark-contrast.less
@@ -34,6 +34,7 @@
         --highlight-text-select: #96c8fd;
 
         --border-toolbar: #616161;
+        --border-toolbar-active-panel-top: var(--border-toolbar);
         --border-divider: #414141;
         --border-regular-control: #696969;
         --border-toolbar-button-hover: #616161;
