--- a/apps/common/main/resources/less/colors-table.less
+++ b/apps/common/main/resources/less/colors-table.less
@@ -45,6 +45,7 @@
     --highlight-text-select: #3494fb;
 
     --border-toolbar: #cbcbcb;
+    --border-toolbar-active-panel-top: var(--background-toolbar);
     --border-divider: #dfdfdf;
     --border-regular-control: #c0c0c0;
     --border-toolbar-button-hover: #e0e0e0;
