--- a/apps/common/main/resources/less/colors-table.less
+++ b/apps/common/main/resources/less/colors-table.less
@@ -195,6 +195,7 @@
 @border-color-shading: var(--border-color-shading);
 @border-error: var(--border-error);
 @border-contrast-popover: var(--border-contrast-popover);
+@border-toolbar-active-panel-top: var(--border-toolbar-active-panel-top);
 
 // Text
 // -------------------------
