--- a/apps/common/main/resources/less/toolbar.less
+++ b/apps/common/main/resources/less/toolbar.less
@@ -389,7 +389,7 @@
 
 .theme-dark {
     .box-controls{
-        border-top: @canvas-background 1px solid;
+        border-top: @border-toolbar-active-panel-top 1px solid;
     }
     .toolbar .tabs {
         overflow: visible;
@@ -397,7 +397,7 @@
         li {
             padding-bottom: 1px;
             &.active {
-                border: @canvas-background 1px solid;
+                border: @border-toolbar-active-panel-top 1px solid;
                 border-bottom: none;
                 height: 29px;
             }
