--- a/apps/common/main/resources/less/toolbar.less
+++ b/apps/common/main/resources/less/toolbar.less
@@ -107,6 +107,7 @@
                 > a {
                     color: @text-normal-ie;
                     color: @text-normal;
+                    padding: 0 11px;
                 }
             }
         }
