--- a/apps/common/main/resources/less/toolbar.less
+++ b/apps/common/main/resources/less/toolbar.less
@@ -36,7 +36,8 @@
 
         display: flex;
         align-items: stretch;
-
+        border-bottom: @border-toolbar-active-panel-top 1px solid;
+        
         .extra {
             background-color: @header-background-color-ie;
             background-color: @header-background-color;
@@ -86,7 +87,7 @@
                 background-color: @background-toolbar;
                 border: @border-toolbar-active-panel-top 1px solid;
                 border-bottom: none;
-                height: 29px;
+                height: 28px;
             }
 
 
@@ -171,7 +172,6 @@
         //height: @height-controls;         // button has strange offset in IE when odd height
         padding: 7px 0;
         display: flex;
-        border-top: @border-toolbar-active-panel-top 1px solid;
         //background-color: #F2CBBF;
 
         .panel {
