--- a/apps/common/main/resources/less/toolbar.less
+++ b/apps/common/main/resources/less/toolbar.less
@@ -37,7 +37,7 @@
         display: flex;
         align-items: stretch;
         border-bottom: @border-toolbar-active-panel-top 1px solid;
-        
+
         .extra {
             background-color: @header-background-color-ie;
             background-color: @header-background-color;
@@ -403,6 +403,10 @@
             box-shadow: inset 0 -1px 0 0 @border-regular-control;
         }
 
+        .box-tabs {
+           border-bottom: none;
+        }
+
         .tabs {
             ul {
                 padding: 0;
@@ -410,7 +414,7 @@
 
             li {
                 position: relative;
-
+                border: none;
                 &:after {
                     //transition: opacity .1s;
                     //transition: bottom .1s;
@@ -425,7 +429,9 @@
 
                 &.active {
                     background-color: transparent;
-
+                    > a {
+                        padding: 0 12px;
+                    }
                     &:after {
                         opacity: 1;
                         bottom: 0;
@@ -440,7 +446,7 @@
                 > a {
                     color: @text-normal-ie;
                     color: @text-normal;
-
+                    top: 0;
                     &::after {
                         display:block;
                         content:attr(data-title);
